# BrowserRelay

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  repository.yaml
.github/workflows/: build.yml
addon/: CHANGELOG.md  DOCS.md  Dockerfile  build.yaml  config.yaml  run.sh
browser_relay/: __init__.py  config.py  main.py
browser_relay/auth/: __init__.py  dependencies.py  tickets.py
browser_relay/browser/: __init__.py  controller.py
browser_relay/frontend/: app.js  index.html  manager.html  manager.js
browser_relay/sessions/: __init__.py  manager.py  models.py  router.py
browser_relay/tokens/: __init__.py  models.py  router.py  store.py
browser_relay/websocket/: __init__.py  handler.py
esphome/: browser_relay_example.yaml
esphome/components/browser_relay/: __init__.py  browser_relay.cpp  browser_relay.h
